--- a/style.css
+++ b/style.css
@@ -1,62 +1,64 @@
 :root {
-    --primary-color: rgb(225 255 255 / 0.65);
+    --bg-img: url("windowsxpbeach.png");
 }
 
 body {
     display: flex;
     flex-direction: column;
-    background-image: url("windowsxpbeach.png");
+    background-image: var(--bg-img);
+    background-repeat: no-repeat;
+    background-color: #096acc;
     justify-content: space-between;
 }
 .logo {
-    padding: 10px;
+    padding: 10px 15px 10px 10px;
     display: flex;
     background-color: rgba(0, 148, 37, 0.7);
     color: white;
-    font-size: clamp(1.5rem, 3.5vw, 45px);
+    font-size: clamp(1.5rem, 3.5vw, 40px);
     align-items: center;
 }
 .logo>img {
-    width: clamp(60px, 9vw, 115px);
+    width: clamp(50px, 7vw, 100px);
     margin-right: 10px;
 }
 @media (min-width: 768px) {
     body {
         flex-direction: row;
+        background-position: bottom left;
     }
-}
-
-@media (min-width: 768px) {
-    aside {
+    aside.left {
         position: relative;
         top: 180px;
         height: 215px;
-        width: 45%;
+        width: 35%;
     }
 }
-
 main {
     align-self: center;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    margin: 1rem 1rem 1rem 0;
     width: 100%;
-    height: 80vh;
-    background-color: var(--primary-color);
-    border-radius: 64px;
+    height: 70vh;
+    margin-top: 8%;
+    border-radius: 16px;
+    /* background-color: rgba(13, 206, 196, 0.5); */
+    background: #9DE8F5;
+    background: linear-gradient(170deg, rgba(157, 232, 245, 0.68) 15%, rgba(255, 255, 255, 0.08) 28%, rgba(223, 247, 252, 0.29) 50%, rgba(157, 232, 245, 0.6) 61%, rgba(9, 106, 204, 0.96) 87%, rgba(9, 106, 204, 0.3) 100%);
 }
 @media (min-width: 768px) {
     main {
         height: 100vh;
+        margin-top: 0;
     }
 }
 .content {
     padding: 2rem;
-    height: 90%;
-    width: 90%;
-    background-color: var(--primary-color);
+    height: 98%;
+    width: 96%;
+    background-color: rgba(255, 255, 255);
     border-radius: 64px;
 }
 form {
@@ -68,4 +70,18 @@ form {
 }
 input {
     width: 200px;
+}
+
+aside.right {
+    width: 0%;
+    left: 100%;
+}
+
+@media (min-width: 768px) {
+    aside.right {
+        width: 15%;
+        background-image: var(--bg-img);
+        background-position: right -200px bottom;
+        background-repeat: no-repeat;
+    }
 }
