--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ main {
 .content {
     display: flex;
     flex-direction: column;
-    padding: 2rem;
+    padding-top: 50px;
     height: 98%;
     width: 96%;
     background-color: rgba(255, 255, 255);
@@ -85,12 +85,54 @@ aside.right {
 }
 form {
     display: flex;
+    flex-direction: column;
+
+    --background-color: #096acc1c;
+}
+
+.tableTop {
+    background-color: var(--background-color);
+    margin-top: 1vh;
+    
+    p, h2 {
+        margin: 2vh 4vw 1.5vh 4vw;
+    }
+}
+
+.tableInputWrapper {
+    display: flex;
+    justify-content: center;
+    input, label {
+        margin: 0.5vh 2vw 0.5vh 2vw;
+    }
+    label {
+        margin-bottom: 0.1rem;
+    }
+    
 }
 .formColumn {
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;
+
+    :first-Child {
+        margin-top: 2rem;
+    }
+    :last-Child {
+        margin-bottom: 2rem;
+    }
+    input {
+    width: 85%;
+    }    
 }
-input {
-    width: 200px;
+
+.tableFooter {
+    margin: 2vh 0 1.5vh 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color:var(--background-color);
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 }
+
 
