--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
         position: relative;
         top: 180px;
         height: 215px;
-        width: 35%;
+        width: 23vw;
     }
     .logo {
         width: 100%;
@@ -45,6 +45,7 @@ main {
     align-self: center;
     display: flex;
     flex-direction: column;
+    flex: 1;
     align-items: center;
     justify-content: center;
     width: 100%;
@@ -64,7 +65,7 @@ main {
 .content {
     display: flex;
     flex-direction: column;
-    padding-top: 50px;
+    padding-top: 1vh;
     height: 98%;
     width: 96%;
     background-color: rgba(255, 255, 255);
@@ -77,7 +78,7 @@ aside.right {
 
 @media (min-width: 768px) {
     aside.right {
-        width: 15%;
+        width: calc(10vw - 3rem);
         background-image: var(--bg-img);
         background-position: right -360px bottom;
         background-repeat: no-repeat;
