--- a/style.css
+++ b/style.css
@@ -2,6 +2,24 @@
     --bg-img: url("windowsxpbeach.png");
 }
 
+@font-face {
+    font-family: 'Nunito';
+    src: url('fonts/Nunito-ExtraLight.woff2') format('woff2'),
+        url('fonts/Nunito-ExtraLight.woff') format('woff');
+    font-weight: 200;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Pridi';
+    src: url('fonts/Pridi-SemiBold.woff2') format('woff2'),
+        url('fonts/Pridi-SemiBold.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -10,18 +28,23 @@ body {
     background-color: #096acc;
     background-position: bottom -345px left -100px;
     justify-content: space-between;
+    font-family: "Nunito";
+    font-weight: 800;
 }
 .logo {
     width: 100vw;
-    padding: 10px 10px 10px 10px;
+    padding: 10px 10px 10px calc(1px + 1vw);
     display: flex;
     background-color: rgba(0, 148, 37, 0.7);
     color: white;
-    font-size: clamp(1.5rem, 3vw, 50px);
+    font-size: clamp(calc(1.5rem - 1vw), 3vw, 50px);
     align-items: center;
+    font-family: "Pridi";
+    letter-spacing: 2px;
 }
 .logo>img {
-    width: clamp(45px, 6vw, 100px);
+    width: clamp(50px, 6vw, 100px);
+    margin-right: 10px;
 }
 @media (min-width: 768px) {
     body {
@@ -38,7 +61,7 @@ body {
         width: 100%;
     }
     .logo>img {
-         margin-right: calc(5px + 1vw);
+         margin-right: 1vw;
     }
 }
 main {
@@ -65,11 +88,12 @@ main {
 .content {
     display: flex;
     flex-direction: column;
-    padding-top: 1vh;
+    padding: 3vh 0 3vh;
     height: 98%;
     width: 96%;
     background-color: rgba(255, 255, 255);
-    border-radius: 64px;
+    border-radius: 32px;
+    margin: 2.5vh 1vw;
 }
 aside.right {
     width: 0%;
@@ -94,26 +118,31 @@ form {
 .tableTop {
     background-color: var(--background-color);
     margin-top: 1vh;
-    
     p, h2 {
-        margin: 2vh 4vw 1.5vh 4vw;
+        margin: 2vh 5vw 1.5vh 5vw;
     }
 }
 
 .tableInputWrapper {
     display: flex;
     justify-content: center;
-    input, label {
-        margin: 0.5vh 2vw 0.5vh 2vw;
-    }
+    align-items: center;
+    gap: 1.5%;
     label {
         margin-bottom: 0.1rem;
+    }
+
+    :first-Child.formColumn {
+        margin-left: 4vw;
+    }
+    :last-Child.formColumn {
+        margin-right: 4vw;
     }
     
 }
 .formColumn {
     display: flex;
-    flex-direction: column;
+    flex-direction: column;   
 
     :first-Child {
         margin-top: 2rem;
@@ -122,12 +151,13 @@ form {
         margin-bottom: 2rem;
     }
     input {
-    width: 85%;
-    }    
+    width: max(120px, 100%);
+    /* margin-bottom: 4vh; */
+    }
 }
 
 .tableFooter {
-    margin: 2vh 0 1.5vh 0;
+    margin-top: 2vh;
     display: flex;
     flex-direction: column;
     align-items: center;
