Update regex and password info behavior
Password validation now uses regex. Lookaheads were needed for the pattern.
Password instructions are now hidden when input is valid. This reduces confusion and unnecessary information for the user.

--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ input#password:focus + div>p, input#password:user-invalid + div>p {
 }
 
 input#password:focus:valid + div>p {
-    color: green;
+    visibility: hidden;
 }
 
 form {
