--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --green: 0, 148, 37;
+    --green: 0 148 37;
     --standard-section-spacing: calc(1rem + 0.7vh);
 }
 @font-face {
@@ -36,7 +36,7 @@ body {
     width: 100vw;
     padding: 10px calc(1px + 5vw) 10px calc(1px + 1vw);
     display: flex;
-    background-color: rgba(var(--green), 0.8);
+    background-color: rgba(var(--green) / 0.8);
     font-size: clamp(calc(1.5rem - 1vw), 3vw, 45px);
     align-items: center;
     font-family: "Pridi";
@@ -60,7 +60,7 @@ body {
     }
     .logo {
         width: 100%;
-        background-color: rgba(var(--green), 0.7);
+        background-color: rgb(var(--green) / 0.7);
     }
     .logo, .logo>img {
         margin: 0 auto;
@@ -133,7 +133,8 @@ form {
 
 .tableInputWrapper {
     background-color: var(--background-color);
-    box-shadow: 0 8px 6px -6px #80808078;
+    box-shadow: 0 2px 6px 2px #80808078;
+
     display: flex;
     flex-direction: column;
     padding: 5vh 5vw 8vh;
@@ -143,6 +144,8 @@ form {
     }
     input {
     width: clamp(130px, 25vw, 240px);
+    border: 1.5px solid rgba(0, 0, 0, 0.363);
+    border-radius: 6px;
     }
 }
 
@@ -194,9 +197,10 @@ a {
 
 .pwReqInfo > p {
     position:absolute;
-    top: 1.1vh;
+    top: 0.5vh;
     width: clamp(130px, 25vw, 240px);
-    font-size: calc(0.65rem + 0.2vw);
+    font-size: calc(0.65rem + 0.3vw);
+    line-height: calc(0.65rem + 0.5vw);
 }
 
 input#password:focus + div>p, input#password:user-invalid + div>p {
@@ -229,17 +233,20 @@ a:active {
 }
 
 input:valid {
-    color: black;
+    border-color: rgba(var(--green) / 0.5);
 }
 /* input:invalid {
     color: red;
 } */
 input:user-invalid {
-    border: 2.5px solid rgba(179, 64, 29, 0.534);
+    border-color: rgba(179, 64, 29, 0.534);
 }
 
 input:focus {
-    border: 3px solid pink;
-    box-shadow: 0 8px 6px -6px #80808078;
+    border: 1px solid rgb(0, 195, 255);
+    box-shadow: 3px 3px 8px 1px #80808078;
 }
 
+input:focus-visible {
+    outline-color: rgba(44, 84, 158, 0.61);
+}
