--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
     --green: 0 148 37;
     --standard-section-spacing: calc(1rem + 0.7vh);
+    --input-base-color: #2b74bc;
 }
 @font-face {
     font-family: 'Nunito';
@@ -140,11 +141,19 @@ form {
     padding: 5vh 5vw 8vh;
     row-gap: 3.2vh;
     label {
+        position: relative;
+        right: 5px;
         margin-bottom: 0.1rem;
+        color: white;
+        span {
+            background-color: var(--input-base-color);
+            padding: 4px;
+            border-radius: 8px;
+        }
     }
     input {
     width: clamp(130px, 25vw, 240px);
-    border: 1.5px solid rgba(0, 0, 0, 0.363);
+    border: 2px solid var(--input-base-color);
     border-radius: 6px;
     }
 }
@@ -210,6 +219,7 @@ input#password:focus + div>p, input#password:user-invalid + div>p {
 
 input#password:focus:valid + div>p {
     visibility: hidden;
+    position: absolute;
 }
 
 form {
@@ -233,20 +243,18 @@ a:active {
 }
 
 input:valid {
-    border-color: rgba(var(--green) / 0.5);
+    outline: 2px solid #009b00dc;
 }
-/* input:invalid {
-    color: red;
-} */
+
 input:user-invalid {
     border-color: rgba(179, 64, 29, 0.534);
 }
 
 input:focus {
-    border: 1px solid rgb(0, 195, 255);
+    outline: 2px solid rgb(0, 195, 255);
     box-shadow: 3px 3px 8px 1px #80808078;
 }
 
 input:focus-visible {
-    outline-color: rgba(44, 84, 158, 0.61);
+    outline: 1px solid #000;
 }
